--- a/computation/hash_generation/generate_disk_hashes.ipynb
+++ b/computation/hash_generation/generate_disk_hashes.ipynb
@@ -11,19 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lsh_interface'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 17\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m file_handler \u001b[38;5;28;01mas\u001b[39;00m fh\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m metafile_handler \u001b[38;5;28;01mas\u001b[39;00m mfh\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mschemes\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlsh_disk\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DiskLSH\n",
-      "File \u001b[0;32m~/Developer/skole/master/code/masteroppgave/schemes/lsh_disk.py:28\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m metafile_handler \u001b[38;5;28;01mas\u001b[39;00m mfh\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m file_handler \u001b[38;5;28;01mas\u001b[39;00m fh\n\u001b[0;32m---> 28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlsh_interface\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LSHInterface\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mDisk\u001b[39;00m:\n\u001b[1;32m     31\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Class structure for disk-based LSH\"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lsh_interface'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
      ]
     }
    ],
@@ -37,9 +32,25 @@
     "\n",
     "from multiprocessing import Pool\n",
     "\n",
-    "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.append(parentdir)\n",
+    "def find_project_root(target_folder=\"masteroppgave\"):\n",
+    "    \"\"\"Find the absolute path of a folder by searching upward.\"\"\"\n",
+    "    currentdir = os.path.abspath(\"__file__\")  # Get absolute script path\n",
+    "    while True:\n",
+    "        if os.path.basename(currentdir) == target_folder:\n",
+    "            return currentdir  # Found the target folder\n",
+    "        parentdir = os.path.dirname(currentdir)\n",
+    "        if parentdir == currentdir:  # Stop at filesystem root\n",
+    "            return None\n",
+    "        currentdir = parentdir  # Move one level up\n",
+    "\n",
+    "# Example usage\n",
+    "project_root = find_project_root(\"masteroppgave\")\n",
+    "\n",
+    "if project_root:\n",
+    "    sys.path.append(project_root)\n",
+    "    print(f\"Project root found: {project_root}\")\n",
+    "else:\n",
+    "    raise RuntimeError(\"Could not find 'masteroppgave' directory\")\n",
     "\n",
     "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
     "from utils.helpers import file_handler as fh\n",
@@ -49,10 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Declaring global variables:\n",
+    "\n",
     "from constants import (\n",
     "    P_MAX_LON,\n",
     "    P_MIN_LON,\n",
@@ -62,19 +75,16 @@
     "    R_MIN_LON,\n",
     "    R_MAX_LAT,\n",
     "    R_MIN_LAT,\n",
-    "    PORTO_OUTPUT_FOLDER,\n",
-    "    ROME_OUTPUT_FOLDER,\n",
     ")\n",
-    "\n",
-    "# Declaring global variables:\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER_PORTO = \"../dataset/hashed_data/disk/porto/\"\n",
-    "OUTPUT_FOLDER_ROME = \"../dataset/hashed_data/disk/rome/\"\n",
     "\n",
-    "PORTO_DATA = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
-    "ROME_DATA = f\"../{ROME_OUTPUT_FOLDER}/\""
+    "PORTO_OUTPUT_FOLDER = \"../../dataset/hashed_data/disk/porto/\"\n",
+    "ROME_OUTPUT_FOLDER = \"../../dataset/hashed_data/disk/rome/\"\n",
+    "\n",
+    "PORTO_DATA_FOLDER = \"../../dataset/porto/output/\"\n",
+    "ROME_DATA_FOLDER = \"../../dataset/rome/output/\""
    ]
   },
   {
@@ -88,19 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    fh.delete_old_files(OUTPUT_FOLDER_ROME, \".gitkeep\")"
+    "    fh.delete_old_files(ROME_OUTPUT_FOLDER, \".gitkeep\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +119,7 @@
     "layers = 4\n",
     "diameter = 1.5\n",
     "num_disks = 50\n",
-    "meta_file = f\"../{ROME_OUTPUT_FOLDER}/META-100.txt\"\n",
+    "meta_file = f\"{ROME_OUTPUT_FOLDER}META-50.txt\"\n",
     "\n",
     "DiskRome = DiskLSH(\n",
     "    \"Rome D1\",\n",
@@ -121,33 +131,26 @@
     "    layers,\n",
     "    diameter,\n",
     "    meta_file,\n",
-    "    ROME_DATA,\n",
+    "    ROME_DATA_FOLDER,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copying meta_files as well\n",
+    "meta_files = mfh.get_meta_files(ROME_DATA_FOLDER)\n",
+    "\n",
+    "for filename in meta_files:\n",
+    "    shutil.copy(ROME_DATA_FOLDER + filename, ROME_OUTPUT_FOLDER)\n",
+    "\n",
     "# Generating the hashes and storing them in output folder along with the meta-files\n",
     "hashes = DiskRome.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "save_trajectory_hashes(OUTPUT_FOLDER_ROME, hashes)\n",
-    "\n",
-    "# Copying meta_files as well\n",
-    "meta_files = mfh.get_meta_files(ROME_DATA)\n",
-    "\n",
-    "for filename in meta_files:\n",
-    "    shutil.copy(ROME_DATA + filename, OUTPUT_FOLDER_ROME)"
+    "save_trajectory_hashes(ROME_OUTPUT_FOLDER, hashes)"
    ]
   },
   {
@@ -161,19 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    fh.delete_old_files(OUTPUT_FOLDER_PORTO, \".gitkeep\")"
+    "    fh.delete_old_files(PORTO_OUTPUT_FOLDER, \".gitkeep\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +185,7 @@
     "layers = 4\n",
     "diameter = 1.5\n",
     "num_disks = 50\n",
-    "meta_file = f\"../{PORTO_OUTPUT_FOLDER}/META-100.txt\"\n",
+    "meta_file = f\"{PORTO_OUTPUT_FOLDER}META-100.txt\"\n",
     "\n",
     "DiskPorto = DiskLSH(\n",
     "    \"Porto D1\",\n",
@@ -194,27 +197,27 @@
     "    layers,\n",
     "    diameter,\n",
     "    meta_file,\n",
-    "    PORTO_DATA,\n",
+    "    PORTO_DATA_FOLDER,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copying meta_files as well\n",
+    "meta_files = mfh.get_meta_files(PORTO_DATA_FOLDER)\n",
+    "\n",
+    "for filename in meta_files:\n",
+    "    shutil.copy(PORTO_DATA_FOLDER + filename, PORTO_OUTPUT_FOLDER)\n",
+    "\n",
     "# Generating the disk-based LSH objects hashes and saving them to file\n",
     "\n",
     "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "save_trajectory_hashes(OUTPUT_FOLDER_PORTO, hashes)\n",
-    "\n",
-    "# Copying meta_files as well\n",
-    "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
-    "\n",
-    "for filename in meta_files:\n",
-    "    shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
+    "save_trajectory_hashes(PORTO_OUTPUT_FOLDER, hashes)"
    ]
   },
   {
@@ -228,9 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hashing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m output_folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschemes/experiments/runtimes/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhashing_runtimes_disk_lsh.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m hashing_map \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mporto_naive\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[43mhashing\u001b[49m\u001b[38;5;241m.\u001b[39mfun_wrapper_p_naive,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mporto_quadrants\u001b[39m\u001b[38;5;124m\"\u001b[39m : hashing\u001b[38;5;241m.\u001b[39mfun_wrapper_p_quadrants,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mporto_kd_tree\u001b[39m\u001b[38;5;124m\"\u001b[39m : hashing\u001b[38;5;241m.\u001b[39mfun_wrapper_p_KD_tree,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrome_naive\u001b[39m\u001b[38;5;124m\"\u001b[39m : hashing\u001b[38;5;241m.\u001b[39mfun_wrapper_r_naive,\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrome_quadrants\u001b[39m\u001b[38;5;124m\"\u001b[39m : hashing\u001b[38;5;241m.\u001b[39mfun_wrapper_r_quadrants,\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrome_kd_tree\u001b[39m\u001b[38;5;124m\"\u001b[39m : hashing\u001b[38;5;241m.\u001b[39mfun_wrapper_r_KD_tree\n\u001b[0;32m     15\u001b[0m }\n\u001b[0;32m     17\u001b[0m config \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mporto\u001b[39m\u001b[38;5;124m\"\u001b[39m : [\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m60\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m2.2\u001b[39m],\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;66;03m# \"rome\" : [1000, 50, 5, 1.6]\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \n\u001b[0;32m     21\u001b[0m }\n\u001b[0;32m     23\u001b[0m runs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hashing' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# #Cell for measrung DiskLSH hash generation times for all methods in both datasets - using coordiante hashes\n",
     "# import pandas as pd\n",
