plotted trajectories inside a bucket

--- a/computation/hash_generation/generate_grid_hashes.ipynb
+++ b/computation/hash_generation/generate_grid_hashes.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root found: /Users/thomasnitsche/Developer/skole/master/masteroppgave\n"
+      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,7 @@
     "    R_MIN_LON,\n",
     "    R_MAX_LAT,\n",
     "    R_MIN_LAT,\n",
+    "    NUMBER_OF_TRAJECTORIES\n",
     ")\n",
     "\n",
     "# Declaring global variables:\n",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,15 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Grid hash object for Rome and saves them to output folder. Also copies the metafiles denoting the different datasets\n",
     "\n",
-    "resolution = 0.5  # km\n",
-    "layers = 1\n",
-    "meta_file = f\"{ROME_OUTPUT_FOLDER}META-50.txt\"\n",
+    "resolution = 1.2  # km\n",
+    "layers = 3\n",
+    "meta_file = f\"{ROME_OUTPUT_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
     "\n",
     "GridRome = GridLSH(\n",
     "    \"Rome G1\",\n",
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
