added functionality for disk bucket placement

--- a/computation/hash_generation/generate_grid_hashes.ipynb
+++ b/computation/hash_generation/generate_grid_hashes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Grid hash object for Rome and saves them to output folder. Also copies the metafiles denoting the different datasets\n",
     "\n",
-    "resolution = 1.2  # km\n",
-    "layers = 3\n",
+    "resolution = 4  # km\n",
+    "layers = 5\n",
     "meta_file = f\"{ROME_OUTPUT_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
     "\n",
     "GridRome = GridLSH(\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6867,7 +6867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master",
+   "display_name": "master_repo",
    "language": "python",
    "name": "python3"
   },
