--- a/computation/hash_generation/generate_disk_hashes.ipynb
+++ b/computation/hash_generation/generate_disk_hashes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +75,7 @@
     "    R_MIN_LON,\n",
     "    R_MAX_LAT,\n",
     "    R_MIN_LAT,\n",
+    "    NUMBER_OF_TRAJECTORIES\n",
     ")\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,9 +118,9 @@
     "# Creating a disk based LSH hashing object over rome\n",
     "\n",
     "layers = 4\n",
-    "diameter = 1.5\n",
-    "num_disks = 50\n",
-    "meta_file = f\"{ROME_OUTPUT_FOLDER}META-50.txt\"\n",
+    "diameter = 1.0\n",
+    "num_disks = 20\n",
+    "meta_file = f\"{ROME_OUTPUT_FOLDER}/META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
     "\n",
     "DiskRome = DiskLSH(\n",
     "    \"Rome D1\",\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
