changed from txt to json when storing buckets

--- a/computation/bucketing/bucket_placement.ipynb
+++ b/computation/bucketing/bucket_placement.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest Bucket: 18335119550780238394043628368761195560\n",
+      "Total Buckets: 5\n",
+      "Buckets with more than one trajectory: 5\n",
+      "Buckets with only one trajectory: 0\n",
+      "Largest Bucket Size: 3050\n",
+      "Percentage of buckets with more than one trajectory: 100.00%\n",
+      "Percentage of buckets with only one trajectory: 0.00%\n"
+     ]
+    }
+   ],
    "source": [
+    "import json\n",
     "import cityhash\n",
     "import os\n",
     "NUMBER_OF_TRAJECTORIES = 3050\n",
@@ -111,6 +126,12 @@
     "        if hash_key not in bucket_system:\n",
     "            bucket_system[hash_key] = []\n",
     "        bucket_system[hash_key].append(filename)\n",
+    "\n",
+    "\n",
+    "# Write the bucket system to a JSON file\n",
+    "output_file_path = f\"../../dataset/buckets/grid/rome/rome_{NUMBER_OF_TRAJECTORIES}.json\"\n",
+    "with open(output_file_path, \"w\") as f:\n",
+    "    json.dump(bucket_system, f)\n",
     "\n",
     "# Analyze and display results\n",
     "total_buckets = len(bucket_system)\n",
@@ -262,6 +283,7 @@
    "source": [
     "import cityhash\n",
     "import os\n",
+    "import json\n",
     "\n",
     "NUMBER_OF_TRAJECTORIES = 3050\n",
     "\n",
@@ -306,11 +328,10 @@
     "            bucket_system[hash_key] = []\n",
     "        bucket_system[hash_key].append(filename)\n",
     "    \n",
-    "# write the bucket system to a file\n",
-    "output_file_path = f\"../../dataset/buckets/disk/rome/rome_{NUMBER_OF_TRAJECTORIES}.txt\"  # Default file path\n",
+    "# Write the bucket system to a JSON file\n",
+    "output_file_path = f\"../../dataset/buckets/disk/rome/rome_{NUMBER_OF_TRAJECTORIES}.json\"\n",
     "with open(output_file_path, \"w\") as f:\n",
-    "    for key, value in bucket_system.items():\n",
-    "        f.write('%s:%s\\n' % (key, value))\n",
+    "    json.dump(bucket_system, f)\n",
     "\n",
     "   \n",
     "# Analyze and display results\n",
