Renamed bucketing file, add dumping info to json file with new name

--- a/computation/bucketing/rome_bucket_placement.ipynb
+++ b/computation/bucketing/rome_bucket_placement.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing nescessary modules\n",
     "import os\n",
@@ -53,7 +45,25 @@
     "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
     "from utils.helpers import file_handler as fh\n",
     "from utils.helpers import metafile_handler as mfh\n",
-    "from schemes.lsh_disk import DiskLSH"
+    "from schemes.lsh_disk import DiskLSH\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rome_lsh_grid_current_parameters = {}\n",
+    "rome_lsh_disk_current_parameters = {}\n",
+    "\n",
+    "# Read from json file\n",
+    "with open(\"../hash_generation/rome_lsh_grid_current_parameters.json\", \"r\") as f:\n",
+    "    rome_lsh_grid_current_parameters = json.load(f)\n",
+    "    \n",
+    "with open(\"../hash_generation/rome_lsh_disk_current_parameters.json\", \"r\") as f:\n",
+    "    rome_lsh_disk_current_parameters = json.load(f)"
    ]
   },
   {
@@ -74,30 +84,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Largest Bucket: 18335119550780238394043628368761195560\n",
-      "Total Buckets: 5\n",
-      "Buckets with more than one trajectory: 5\n",
-      "Buckets with only one trajectory: 0\n",
-      "Largest Bucket Size: 3050\n",
-      "Percentage of buckets with more than one trajectory: 100.00%\n",
-      "Percentage of buckets with only one trajectory: 0.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import cityhash\n",
     "import os\n",
-    "NUMBER_OF_TRAJECTORIES = 3050\n",
     "\n",
     "# Paths\n",
     "ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER = \"../../dataset/hashed_data/grid/rome/\"\n",
-    "ROME_HASHED_TRAJECTORIES_FOLDER_META_FILE = f\"{ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+    "ROME_HASHED_TRAJECTORIES_FOLDER_META_FILE = f\"{ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER}META-{rome_lsh_grid_current_parameters[\"number_of_trajectories\"]}.txt\"\n",
     "\n",
     "ROME_FULL_TRAJECTORIES_OUTPUT_FOLDER = \"../../dataset/rome/output/\"\n",
     "\n",
@@ -128,8 +123,9 @@
     "        bucket_system[hash_key].append(filename)\n",
     "\n",
     "\n",
+    "\n",
     "# Write the bucket system to a JSON file\n",
-    "output_file_path = f\"../../results_hashed/buckets/grid/rome/rome_{NUMBER_OF_TRAJECTORIES}.json\"\n",
+    "output_file_path = f\"../../results_hashed/buckets/grid/rome/rome_grid_resolution_{rome_lsh_grid_current_parameters[\"resolution\"]}_layers_{rome_lsh_grid_current_parameters[\"layers\"]}_trajectories_{rome_lsh_grid_current_parameters[\"number_of_trajectories\"]}.json\"\n",
     "with open(output_file_path, \"w\") as f:\n",
     "    json.dump(bucket_system, f)\n",
     "\n",
@@ -263,33 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Largest Bucket: 292977397802616694193368700077375428004\n",
-      "Total Buckets: 16355\n",
-      "Buckets with more than one trajectory: 3816\n",
-      "Buckets with only one trajectory: 12539\n",
-      "Largest Bucket Size: 99\n",
-      "Percentage of buckets with more than one trajectory: 23.33%\n",
-      "Percentage of buckets with only one trajectory: 76.67%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cityhash\n",
     "import os\n",
-    "import json\n",
-    "\n",
-    "NUMBER_OF_TRAJECTORIES = 3050\n",
     "\n",
     "# Paths\n",
     "ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER = \"../../dataset/hashed_data/disk/rome/\"\n",
-    "ROME_HASHED_TRAJECTORIES_FOLDER_META_FILE = f\"{ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER}META-{NUMBER_OF_TRAJECTORIES}.txt\"\n",
+    "ROME_HASHED_TRAJECTORIES_FOLDER_META_FILE = f\"{ROME_HASHED_TRAJECTORIES_OUTPUT_FOLDER}META-{rome_lsh_disk_current_parameters[\"number_of_trajectories\"]}.txt\"\n",
     "\n",
     "ROME_FULL_TRAJECTORIES_OUTPUT_FOLDER = \"../../dataset/rome/output/\"\n",
     "\n",
@@ -327,15 +306,15 @@
     "        if hash_key not in bucket_system:\n",
     "            bucket_system[hash_key] = []\n",
     "        bucket_system[hash_key].append(filename)\n",
-    "    \n",
+    "        \n",
+    "        \n",
+    "\n",
     "# Write the bucket system to a JSON file\n",
-    "output_file_path = f\"../../results_hashed/buckets/disk/rome/rome_{NUMBER_OF_TRAJECTORIES}.json\"\n",
+    "output_file_path = f\"../../results_hashed/buckets/grid/rome/rome_disk_diameter_{rome_lsh_disk_current_parameters['diameter']}_layers_{rome_lsh_disk_current_parameters['layers']}_disks_{rome_lsh_disk_current_parameters['num_disks']}_trajectories_{rome_lsh_disk_current_parameters['number_of_trajectories']}.json\"\n",
     "with open(output_file_path, \"w\") as f:\n",
     "    json.dump(bucket_system, f)\n",
-    "\n",
-    "   \n",
+    "    \n",
     "# Analyze and display results\n",
-    "\n",
     "total_buckets = len(bucket_system)\n",
     "buckets_with_multiple = sum(1 for trajectories in bucket_system.values() if len(trajectories) > 1)\n",
     "buckets_with_single = total_buckets - buckets_with_multiple\n",
@@ -469,7 +448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master_repo",
+   "display_name": "master",
    "language": "python",
    "name": "python3"
   },
