--- a/computation/bucketing/rome_bucket_placement.ipynb
+++ b/computation/bucketing/rome_bucket_placement.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root found: c:\\Users\\eivin\\dev\\JoonEndreLSH\\masteroppgave\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing nescessary modules\n",
     "import os\n",
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest Bucket: 210474472678124806769105046041730943051\n",
+      "Total Buckets: 496\n",
+      "Buckets with more than one trajectory: 4\n",
+      "Buckets with only one trajectory: 492\n",
+      "Largest Bucket Size: 2\n",
+      "Percentage of buckets with more than one trajectory: 0.81%\n",
+      "Percentage of buckets with only one trajectory: 99.19%\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import cityhash\n",
@@ -161,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket with the most trajectories: 210474472678124806769105046041730943051 (2 trajectories)\n",
+      "Most Similar Pair (Lowest similarity value): 0.1406260090323557 between R_DUB.txt and R_ECP.txt\n",
+      "Least Similar Pair (Highest similarity value): 0.1406260090323557 between R_DUB.txt and R_ECP.txt\n",
+      "Average Similarity inside bucket '210474472678124806769105046041730943051': 0.14\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from itertools import combinations\n",
@@ -259,9 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest Bucket: 299718756038788115561691674111661080046\n",
+      "Total Buckets: 446\n",
+      "Buckets with more than one trajectory: 22\n",
+      "Buckets with only one trajectory: 424\n",
+      "Largest Bucket Size: 6\n",
+      "Percentage of buckets with more than one trajectory: 4.93%\n",
+      "Percentage of buckets with only one trajectory: 95.07%\n"
+     ]
+    }
+   ],
    "source": [
     "import cityhash\n",
     "import os\n",
@@ -310,7 +357,7 @@
     "        \n",
     "\n",
     "# Write the bucket system to a JSON file\n",
-    "output_file_path = f\"../../results_hashed/buckets/grid/rome/rome_disk_diameter_{rome_lsh_disk_current_parameters['diameter']}_layers_{rome_lsh_disk_current_parameters['layers']}_disks_{rome_lsh_disk_current_parameters['num_disks']}_trajectories_{rome_lsh_disk_current_parameters['number_of_trajectories']}.json\"\n",
+    "output_file_path = f\"../../results_hashed/buckets/disk/rome/rome_disk_diameter_{rome_lsh_disk_current_parameters['diameter']}_layers_{rome_lsh_disk_current_parameters['layers']}_disks_{rome_lsh_disk_current_parameters['num_disks']}_trajectories_{rome_lsh_disk_current_parameters['number_of_trajectories']}.json\"\n",
     "with open(output_file_path, \"w\") as f:\n",
     "    json.dump(bucket_system, f)\n",
     "    \n",
@@ -448,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "master",
+   "display_name": "master_repo",
    "language": "python",
    "name": "python3"
   },
